# rustxl

./: .gitignore  Cargo.toml  README.md  spreadsheet.csv
.github/workflows/: release.yml
.tasks/: BUG_TODOS.md  TESTS.md  TODO_FORMULAS.md
Formula/: README.md  xl.rb
docs/: CNAME  index.html  install.bat  install.ps1  install.sh  script.js  styles.css
remotion/: package-lock.json  package.json
remotion/src/: Root.tsx
remotion/src/compositions/: Logo.tsx  MacOSTerminal.tsx  Master.tsx  TerminalContent.tsx
scripts/install/: README.md  install.bat  install.sh
src/: constants.rs  formula.rs  input.rs  main.rs  save.rs  settings.rs  spreadsheet.rs  style.rs  types.rs  ui.rs  update.rs
