[package]
name = "xl"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
ratatui = "0.30.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
calamine = "0.24"
atty = "0.2"
dirs = "5.0"
arboard = "3.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
flate2 = "1.0"
tar = "0.4"
